# kata1

./: .gitignore  CMakeLists.txt  kata1.cpp  readme.md
src/: CMakeLists.txt  kata1.cpp
tests/: CMakeLists.txt  kata1_test.cpp
